<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WIFI DAQ</string>
    <string name="menu_settings">Settings</string>
    <string name="add_device">Add Device&#8230;</string>
    <string name="rotation_lock">Lock Orientation</string>
    <string name="rotation_unlock">Unlock Orientation</string>
    <string name="app_options">Options&#8230;</string>
    <string name="title_activity_chart">Sensor Data Chart</string>
    <string name="tableColumnHeadingTime">Time</string>
    <string name="tableColumnHeadingChannel0">Channel 0</string>
    <string name="tableColumnHeadingChannel1">Channel 1</string>
    <string name="tableColumnHeadingChannel2">Channel 2</string>
    <string name="tableColumnHeadingChannel3">Channel 3</string>
    <string name="connectButtonString">Connect</string>
    <string name="ipLabelText">IP</string>
    <string name="portLabelText">Port</string>
    <string name="refreshButtonString">Refresh</string>
    <string name="closeButtonString">Close All</string>
    <string name="handleLbl">scale</string>
    <string name="logDataLbl">Disable Data Logging</string>
    <string name="logDataLblOff">Enable Data Logging</string>
    <string name="deviceNameLbl">Device Name</string>
    <string name="deviceTypeLbl">Device Type</string>
    <string name="hostNameLbl">Host Name</string>
    <string name="macAddrLbl">MAC Address</string>
    
    <string-array name="sampleRates">
        <item>0.01</item>
        <item>0.1</item>
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    
    <string-array name="sampleFrequencies">
        <item>1</item>
        <item>10</item>
        <item>100</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>
    
</resources>