<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/device_info_row"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/device_connection_toggle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deviceNameLbl" />

                <TextView
                    android:id="@+id/device_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostNameLbl" />

                <TextView
                    android:id="@+id/device_host_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/macAddrLbl" />

                <TextView
                    android:id="@+id/device_mac_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>


        </TableLayout>
    </LinearLayout>
    
       <ToggleButton
           android:id="@+id/device_log_data_toggle"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/logDataLbl"
           android:textOn="@string/logDataLbl"
           android:textOff="@string/logDataLblOff" />

    <TableLayout
        android:id="@+id/channelTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="none"
        android:stretchColumns="1" >
        </TableLayout>
</LinearLayout>